# oktofetch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: release.yml
src/: archive.rs  binary.rs  config.rs  error.rs  github.rs  main.rs  platform.rs  tool.rs
