[package]
name = "oktofetch"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["mhalder"]
repository = "https://github.com/mhalder/oktofetch"
description = "A GitHub release binary manager"
readme = "README.md"
keywords = ["github", "releases", "binary", "cli", "installer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Archive handling
tar = "0.4"
flate2 = "1.0"
zip = "0.6"

# Progress indicators
indicatif = "0.17"

# Path utilities
directories = "5.0"
tempfile = "3.13"

[dev-dependencies]
temp-env = "0.3"
tokio-test = "0.4"
wiremock = "0.6"
